# CSC2106-IoT-EMCS

./: .gitignore  .gitmodules  BARR_C_ANALYSIS.md  CMakeLists.txt  README.md  REQUIREMENTS_TRACEABILITY_MATRIX.md  build.sh  start_emcs.sh  test.txt
Waveshare1121-Gateway/: Makefile  main.c  mesh_protocol.h
Waveshare1121-Gateway/Core1121_XF_Demo/raspberrypi/: Makefile  readme_CN.txt  readme_EN.txt
Waveshare1121-Gateway/Core1121_XF_Demo/raspberrypi/examples/: CMakeLists.txt  lr1121_config.c  lr1121_config.h  main.c
Waveshare1121-Gateway/Core1121_XF_Demo/raspberrypi/examples/lr1121_LoRaWAN/: lr1121_LoRaWAN.c  lr1121_LoRaWAN.h
Waveshare1121-Gateway/Core1121_XF_Demo/raspberrypi/examples/lr1121_cad/: lr1121_cad.c  lr1121_cad.h
Waveshare1121-Gateway/Core1121_XF_Demo/raspberrypi/examples/lr1121_firmware_update/: lr1121_firmware_update.c  lr1121_firmware_update.h
Waveshare1121-Gateway/Core1121_XF_Demo/raspberrypi/examples/lr1121_lr_fhss/: lr1121_lr_fhss.c
Waveshare1121-Gateway/Core1121_XF_Demo/raspberrypi/examples/lr1121_per/: lr1121_per.c  lr1121_per.h
Waveshare1121-Gateway/Core1121_XF_Demo/raspberrypi/examples/lr1121_ping_pong/: lr1121_ping_pong.c  lr1121_ping_pong.h
Waveshare1121-Gateway/Core1121_XF_Demo/raspberrypi/examples/lr1121_read/: lr1121_read.c
Waveshare1121-Gateway/Core1121_XF_Demo/raspberrypi/examples/lr1121_sigfox/: lr1121_sigfox.c  lr1121_sigfox.h
Waveshare1121-Gateway/Core1121_XF_Demo/raspberrypi/examples/lr1121_spectral_scan/: lr1121_spectral_scan.c
Waveshare1121-Gateway/Core1121_XF_Demo/raspberrypi/examples/lr1121_spetrum_display/: lr1121_spetrum_display.c  lr1121_spetrum_display.h
Waveshare1121-Gateway/Core1121_XF_Demo/raspberrypi/examples/lr1121_tx_cw/: lr1121_tx_cw.c  lr1121_tx_cw.h
Waveshare1121-Gateway/Core1121_XF_Demo/raspberrypi/examples/lr1121_tx_infinite_preamble/: lr1121_tx_infinite_preamble.h
Waveshare1121-Gateway/Core1121_XF_Demo/raspberrypi/examples/lr1121_write/: lr1121_write.c  lr1121_write.h
Waveshare1121-Gateway/Core1121_XF_Demo/raspberrypi/src/gpio/: dev_gpio.c  dev_gpio.h
Waveshare1121-Gateway/Core1121_XF_Demo/raspberrypi/src/lr1121/: lr1121_modem_hal.c  lr11xx_hal.c  wavesahre_lora_1121.c  wavesahre_lora_1121.h
Waveshare1121-Gateway/Core1121_XF_Demo/raspberrypi/src/spi/: spi.c  spi.h
dashboard/: DASHBOARDREADME.md  package-lock.json  package.json
dashboard/backend/: package-lock.json  package.json  qos.js  server.js
dashboard/frontend/: client.js  index.html
dashboard/frontend/css/: style.css
dashboard/frontend/js/: charts.js  commands.js  handlers.js  runs.js  socket.js  topics.js  ui.js
large-file-reconstruction/: data_frame.c  data_frame.h
mqtt-sn-arduino-client/: aes_payload.h  config.h  mesh_protocol.h  mqtt-sn-arduino-client.ino  mqtt-sn-udp.cpp  mqtt-sn-udp.h  mqttsn_transport.h  mqttsn_transport_lora.cpp
mqtt-sn-pico-client/: .clang-format  CMakeLists.txt  FreeRTOSConfig.h  HIGH_PRIORITY_FIXES.md  PLAN.md  build.sh  config.h  functions.c  functions.h  hw_config.c  main.c  mqtt-client.c  mqtt-client.h  mqtt-sn-pico-client-rx.c  mqtt-sn-pico-client-tx.c  mqtt-sn-pico-client.c  mqtt_task_defs.h  mqttsn_bridge.c  mqttsn_bridge.h  pico-client-IoT.c  pico-client-pub.c  pico-client-sub.c  praise_lord_fauzi.txt  test.txt
mqtt-sn-pico-client/docs/: AUTOMATED_TESTS_README.md  CONTROL_MESSAGE_IMPLEMENTATION.md  CORE_TRACEABILITY_MATRIX.md  FILE_TRANSFER_DEMO_SETUP.md  GO_BACK_N_MQTT_IMPLEMENTATION.md  MIGRATION_COMPLETION_GUIDE.md  MODULE_STATUS.md  README_RX_TX_SPLIT.md  REFACTORING_PLAN.md  algorithms.md  chunk_based_write_flow.md  directory_expansion_implementation.md  interface_specifications.md  optimisation_strategy.md  streaming_architecture.md  streaming_mqtt_implementation.md
mqtt-sn-pico-client/drivers/: CMakeLists.txt  README.md  chunk_write_example.c  large_file_test.c  microsd_chunk.c  microsd_demo.c  microsd_driver.c  microsd_driver.h  microsd_file.c  microsd_internal.h  microsd_spi.c  microsd_spi.h  test  timestamptest.c
mqtt-sn-pico-client/drivers/old/: CMakeLists.txt  microsd_driver.c  microsd_driver.h  microsd_exfat.c  microsd_file.c  microsd_spi.c  microsd_spi.h  microsd_util.c
mqtt-sn-pico-client/drivers/old/tests/: automated_microsd_test.c  microsd_demo.c
mqtt-sn-pico-client/drivers/tests/: README.md  automated_test_result.md  large_file_test.c  microsd_demo.c  multi_file_write_test.c
mqtt-sn-pico-client/drivers/tests/results/: automated_test_result.md
mqtt-sn-pico-client/fs/: CMakeLists.txt  chunk_transfer.c  chunk_transfer.h  data_frame.c  data_frame.h  freertos_hooks.c
mqtt-sn-pico-client/fs/tests/: automated_chunk_test.c  automated_streaming_test.c  automated_test_result.md  chunk_transfer_filename_test.c  chunk_write_example.c  data_frame_demo.c  file_transfer_demo.c  serialize_test.c  streaming_test.c
mqtt-sn-pico-client/fs/tests/results/: automated_chunk_test.md  chunk_test_result.md  gobackn_test.md  stream_test_result.md
mqtt-sn-pico-client/mqtt/: mqtt-sn-udp.c  mqtt-sn-udp.h
mqtt-sn-pico-client/mqtt/tests/: mqtt_sn_test.c
mqtt-sn-pico-client/mqtt/tests/results/: mqtt_sn_result.md
mqtt-sn-pico-client/testresults/: automated_streaming_test.md  mqtt_sn_result.md  multi_file_write_test.md
paho.mqtt-sn.embedded-c-master/: CMakeLists.txt
paho.mqtt-sn.embedded-c-master/MQTTSNGateway/: gateway.conf  predefinedTopic.conf
paho.mqtt-sn.embedded-c-master/MQTTSNGateway/GatewayTester/src/: LMqttsnClient.cpp
paho.mqtt-sn.embedded-c-master/MQTTSNGateway/src/: CMakeLists.txt
paho.mqtt-sn.embedded-c/MQTTSNGateway/: gateway.conf
paho.mqtt-sn.embedded-c/MQTTSNGateway/GatewayTester/src/: LTaskManager.cpp
performance/: lora_routing_20260328_231551.csv  perf_analysis_lora.py  perf_analysis_lora_multihop.py  perf_analysis_pico.py  perf_collector_lora.py  perf_collector_pico.py  perf_comparison.py  perf_plot_lora.py  perf_plot_lora_multihop.py  perf_plot_pico.py
performance/data/: lora_singlehop_20260319_023109.csv  pico_qos0_20260316_041319.csv  pico_qos1_20260316_041358.csv  pico_qos2_20260316_041419.csv
(+12 files in other folders)
